# curve-sim-cpp

./: .clangd  .gitignore  .gitmodules  README.md
autoresearch/: main.sh  program.md
cpp_modular/: CMakeLists.txt
cpp_modular/include/core/: common.hpp  json_utils.hpp  numeric_types.hpp
cpp_modular/include/events/: loader.hpp  types.hpp
cpp_modular/include/harness/: actions.hpp  cli.hpp  detailed_output.hpp  donation.hpp  event_loop.hpp  idle_tick.hpp  logging.hpp  metrics.hpp  npz_writer.hpp  output.hpp  pool_value.hpp  runner.hpp  runtime_backend.hpp  runtime_runner.hpp  u256_pool_adapter.hpp  user_swap.hpp
cpp_modular/include/pools/: config.hpp  pool_config_parse.hpp  pool_config_source.hpp  pool_init.hpp
cpp_modular/include/pools/twocrypto_fx/: fee_model.hpp  helpers.hpp  policy.hpp  stableswap_math.hpp  twocrypto.hpp
cpp_modular/include/trading/: arbitrageur.hpp  costs.hpp  cowswap_trader.hpp  decision.hpp  legacy_arbitrageur.hpp
cpp_modular/scripts/: parity_test.py  pgo_build.sh
cpp_modular/src/: benchmark_harness.cpp  cli.cpp  eval_server.cpp  events.cpp  main.cpp  pool_config_source.cpp  stableswap_math_i.cpp
python/: pyproject.toml
python/arb_sim/: arb_run_npz.py  arb_sim.py  compare_arb_runs.py  compare_plots.py  compare_sims.py  find_local_maxima_orjson.py  find_ranked_maxima.py  generate_pools_generic.py  generate_pools_nd.py  generate_trades.py  grid_axes.py  inspect_nevergrad_result.py  modal_sweep.py  nevergrad_compare.py  nevergrad_fee_runner.py  plot_candles.py  plot_diffs.py  plot_heatmap.py  plot_heatmap_nd.py  plot_heatmap_nd_opt.py  plot_price_scale.py  pool_helpers.py  ref_plot_all.py  thread_sweep.py  yb_releverage.py
python/arb_sim/cluster_orchestration/: README.md  __init__.py  build.py  collect.py  config.py  distribute.py  monitor.py  orchestrate.py  run.py  utils.py
python/arb_sim/trade_data/: process_series.py
python/arb_sim/trade_data/btcusd/: fetch.py  fetch_binance.py  process.py  process_feed_btcusd.py
python/arb_sim/trade_data/ethusd/: README.md  fetch_binance.py
python/arb_sim/trade_data/usdngn/: csv_to_json.py
python/benchmark_math/: main.py
python/benchmark_pool/: __init__.py  arb_actions_to_sequence.py  generate_data.py  run_cpp_variants.py  run_full_benchmark.py
python/benchmark_pool/debug/: arb_states_vs_double.py  arb_vs_double.py  double_vs_vyper.py  inspect_context.py  parse_and_diff.py  variants_diff.py
python/cpp_pool/: __init__.py  cpp_pool_runner.py
python/tests/: test_arb_run_npz.py  test_arb_sim_runner.py  test_boa_parity_fxswap_ext_fee.py  test_cluster_orchestration.py  test_compact_grid_loader.py  test_compare_arb_runs.py  test_generate_data.py  test_generate_pools_nd.py  test_grid_axes.py  test_plot_heatmap_nd_opt.py  test_policy_api_shape.py  test_thread_sweep.py  test_yb_releverage.py
python/vyper_pool/: __init__.py  mock_erc20.vy  vyper_pool_runner.py
